# skribblio-clone-rust

./: README.md  package-lock.json
frontend/: package-lock.json
frontend/src/: app.html
frontend/src/lib/: domains.ts  helper.ts  stores.ts
frontend/src/lib/components/playing/: Chat.svelte  DrawingBoard.svelte  PlayersList.svelte  RoundChangeMenu.svelte
frontend/src/lib/components/room/: OwnerSettings.svelte  PlayingPage.svelte  ResultsPage.svelte  UsernamePrompt.svelte  WaitingPage.svelte
frontend/src/lib/types/server/: index.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/room/[id]/: +page.svelte
server/: Cargo.toml
server/src/: main.rs  messages.rs  room.rs  server.rs  session.rs
