[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
actix = "0.13.0"
actix-cors = "0.6.4"
serde = { version="1.0.152", features=["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.2.2", features = ["v4", "serde"] }